# notion-cli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  config.rs  database.rs  main.rs  notion.rs  task.rs  traits.rs
src/handlers/: config.rs  init.rs  mod.rs  task.rs
src/models/: mod.rs  task.rs  task_status.rs
src/services/: config.rs  mod.rs  notion.rs
