[package]
name = "notion-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
