[package]
name = "notion-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
dirs = "4.0.0"
colour = "0.6.0"

[profile.release]
strip = true
# opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1